# analisis_de_datos_empresariales_dw_banco

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: carga_inigial.py  carga_staging.py  carga_warehouse.py  config.py  etl_ingesta.py  init_db.py  utils.py
sql/: functions_and_utils.sql  generar_dim_tiempo.sql  load_dim_descuento.sql  load_dim_estado_prestamo.sql  load_dim_proposito.sql  load_dim_sucursal.sql  load_dim_tipo_prestamo.sql  schema.sql  truncate_tables.sql
