[project]
name = "dw-banco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-postgresql>=1.11.0",
    "connectorx>=0.4.5",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "psycopg2>=2.9.12",
]
